--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
           </div>
           <div class="card course">
-            <div style="height:140px; border-radius:14px; background:url('https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1600&auto=format&fit=crop') center/cover"></div>
+            <div style="height:140px; border-radius:14px; background:url('https://images.unsplash.com/photo-1559819615-9e8ae012d723?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover"></div>
             <h3>Arduino para Automatización</h3>
             <div class="tags">
               <span class="tag">Nivel: Básico</span>
